--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,11 @@
+#root1 {
+  width:80vw;
+  display:flex;
+  justify-content: center;
+  background-color: lightgrey;
+}
+
+
 
 li > a {
   color: inherit;
