--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,37 @@
-#root1 {
-  width:80vw;
+*{margin:0; padding:0; box-sizing: border-box;}
+
+
+#root0 {
   display:flex;
-  justify-content: center;
-  background-color: lightgrey;
+  align-items: center;
+  
+}
+
+#root0 > h1{
+  margin-left : 1vw;
+  cursor: pointer;
 }
 
 
+#root0 > div{
+  margin-left : 5vw;
+}
+
+#root1 {
+  width:100vw;
+  height:7vh;
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  background-color: lightgrey;
+}
+
+.mainimage{
+  width:80vw;
+  height:10vh;
+  background-image: url('a.jpg');
+  background-size: cover;
+}
 
 li > a {
   color: inherit;
@@ -21,9 +47,19 @@ li > a {
 }
 
 #categories li {
-  margin-right: 20px; /* 카테고리 항목 사이의 간격 조절 */
-  
+  margin-right: 150px; /* 카테고리 항목 사이의 간격 조절 */
 }
+
+#categories li a {
+  font-family: 'Times New Roman', Times, serif;
+}
+
+
+
+#categories ul > li :hover{
+  background-color: white;
+}
+
 
 #categories li:last-child {
   margin-right: 0; /* 마지막 카테고리 항목의 간격 제거 */
