--- a/styles.css
+++ b/styles.css
@@ -96,3 +96,27 @@ li > a {
   padding: 10px;
   border: 1px solid #ccc;
   z-index: 1;
+}
+
+
+.slider-container {
+  width: 100%;
+  height:20vh;
+  overflow: hidden;
+  position: relative;
+  text-align: center;
+}
+
+.slide {
+  float: left;
+  width: 100%;
+  display: none;
+  background-size: cover; /* 이미지를 컨테이너에 가득 채우도록 설정 */
+  background-position: center; /* 이미지를 가운데 정렬 */
+  height: 20vh; /* 슬라이더의 높이에 맞게 조정 (원하는 높이로 변경) */
+}
+
+.slide img {
+  width: 100%; /* 이미지를 슬라이드 너비에 맞게 조정 */
+  height: auto; /* 높이를 자동으로 조정하여 원래 비율 유지 */
+}
