--- a/styles.css
+++ b/styles.css
@@ -120,3 +120,10 @@ li > a {
   width: 100%; /* 이미지를 슬라이드 너비에 맞게 조정 */
   height: auto; /* 높이를 자동으로 조정하여 원래 비율 유지 */
 }
+
+
+
+.random-products{
+  width:500px;
+  height:800px;
+}
